1. Создана сущность user, для которой были написаны миграции, кодогенерация, орм модель, репо, сервис и обработчики. Добавлены валидации. 2. Был модицифирован main файл, постарался сделать всё понятно и структуризировано. 3. Была написана альтер миграция для tasks, добавив связь с таблицей users. 4. Обновлены структуры моделей User и Task(Tasks []Task для User, UserID uint для Task). 5. Обновлён openapi.yaml: поле user_id в компонентах task для связи задачи с конкретным пользователем. 6. Обновлены TaskService и UserService. userService метод GetTasksForUser(userID uint), чтобы получать все задачи, принадлежащие пользователю. taskService, чтобы при создании задачи добавлялся user_id, связывающий её с пользователем.
